--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -11,7 +11,7 @@
   margin-right: auto;
 
   background-image: linear-gradient(rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)),
-    url('../../images/header-mobile.jpg');
+    url('../images/hero-mobile.jpg');
 
   background-repeat: no-repeat;
   background-size: cover;
@@ -39,7 +39,7 @@
   screen and (min-width: 360px) {
   .hero-fon {
     background-image: linear-gradient(rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)),
-      url('../../images/header-mobile@2x.jpg');
+      url('../images/hero-mobile@2x.jpg');
   }
 }
 
@@ -47,7 +47,7 @@
   .hero-fon {
     // max-width: 1199px;
     background-image: linear-gradient(rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)),
-      url('../../images/header-tablet.jpg');
+      url('../images/hero-tablet.jpg');
   }
 }
 
@@ -57,7 +57,7 @@
   screen and (min-width: 768px) {
   .hero-fon {
     background-image: linear-gradient(rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)),
-      url('../../images/header-tablet@2x.jpg');
+      url('../images/hero-tablet@2x.jpg');
   }
 }
 
@@ -71,7 +71,7 @@
     // max-width: 1600px;
     height: 600px;
     background-image: linear-gradient(rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)),
-      url('./../images/header.jpg');
+      url('../images/hero.jpg');
   }
 
   .hero-title {
@@ -89,7 +89,7 @@
   screen and (min-width: 1200px) {
   .hero-fon {
     background-image: linear-gradient(rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)),
-      url('./../images/header@2x.jpg');
+      url('../images/hero@2x.jpg');
   }
 }
 
