--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -68,7 +68,7 @@
   }
 
   .hero-fon {
-    // max-width: 1600px;
+    max-width: 1600px;
     height: 600px;
     background-image: linear-gradient(rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)),
       url('../images/hero.jpg');
